--- a/src/cups/.cvsignore
+++ b/src/cups/.cvsignore
@@ -15,5 +15,8 @@ ppd
 ppd-stamp
 rastertogutenprint.5.2
 test-rastertogutenprint
-selphy
+canonselphy
 kodak1400
+kodak6800
+shinkos2145
+sonyupdr150
