--- a/src/cups/Makefile.am
+++ b/src/cups/Makefile.am
@@ -1,5 +1,5 @@
 
-## $Id: Makefile.am,v 1.134 2013/07/27 11:36:25 speachy Exp $
+## $Id: Makefile.am,v 1.135 2013/07/27 16:34:56 speachy Exp $
 ## Copyright (C) 2000 Roger Leigh
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -114,7 +114,8 @@ commandtocanon_LDADD = $(CUPS_LIBS)
 commandtoepson_SOURCES = commandtoepson.c
 commandtoepson_LDADD = $(CUPS_LIBS)
 
-gutenprint_SOURCES = selphy_print.c kodak1400_print.c kodak6800_print.c shinko_s2145_print.c sony_updr150_print.c backend_common.c
+gutenprint_SOURCES = selphy_print.c kodak1400_print.c kodak6800_print.c shinko_s2145_print.c sony_updr150_print.c backend_common.c backend_common.h
+
 gutenprint_LDADD = $(LIBUSB_LIBS)
 gutenprint_CPPFLAGS = $(LIBUSB_CFLAGS) -DURI_PREFIX="\"gutenprint$(GUTENPRINT_MAJOR_VERSION)$(GUTENPRINT_MINOR_VERSION)+usb\""
 
@@ -288,5 +289,4 @@ EXTRA_DIST = \
 	calibrate.ppm \
 	command.txt \
 	command.types \
-	test-ppds \
-	backend-common.h
+	test-ppds
