--- a/doc/developer/Makefile.am
+++ b/doc/developer/Makefile.am
@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.23 2012/05/26 19:09:01 rlk Exp $
+## $Id: Makefile.am,v 1.24 2013/12/16 02:34:38 rlk Exp $
 ## Copyright (C) 2001 Andy Stewart and Roger Leigh
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -103,7 +103,7 @@ gutenprint.pdf:  $(MANUAL_SRC_FILES)
 	    $(LN_S) -f $(srcdir)/$$file $$file ; \
 	  done ; \
 	fi ; \
-	$(DB2PDF) gutenprint.xml
+	$(DB2PDF) gutenprint.xml 2>&1 | $(PERL) ./cleanwarnings.pl
 
 html: html-stamp
 
