--- a/src/cups/.cvsignore
+++ b/src/cups/.cvsignore
@@ -15,8 +15,4 @@ ppd
 ppd-stamp
 rastertogutenprint.5.2
 test-rastertogutenprint
-canonselphy
-kodak1400
-kodak6800
-shinkos2145
-sonyupdr150
+gutenprint
