dyesub: Add 300x600 DPI printing to DNP DS40 and DS80.
This required a kludge in the foomatic-generator script, it didn't like
the '300x600' resolution.

--- a/src/foomatic/foomatic-generator.in
+++ b/src/foomatic/foomatic-generator.in
@@ -1333,7 +1333,10 @@ sub qualityorder {
 		    "dpi_photomonodraft",
 		    "dpi_photomonodraft2",
                     "dpi_ohphigh",
-                    "dpi_ohp"
+                    "dpi_ohp",
+	    # Dyesub
+	"x600",
+	"x300"
 		    );
     my ($a, $b) = @_;
     # Bring the suffixes to lower case
