--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-dnl $Id: configure.ac,v 1.245 2014/01/12 02:06:51 rlk Exp $
+dnl $Id: configure.ac,v 1.246 2014/01/12 17:12:56 rlk Exp $
 dnl Copyright (C) 2001-2004 Roger Leigh
 dnl 
 dnl This program is free software; you can redistribute it and/or modify
@@ -86,7 +86,7 @@ pushdef([GUTENPRINT_VERSION], GUTENPRINT_MAJOR_VERSION.GUTENPRINT_MINOR_VERSION.
 
 AC_INIT(GUTENPRINT_NAME, GUTENPRINT_VERSION, [gimp-print-devel@lists.sourceforge.net])
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.245 $)
+AC_REVISION($Revision: 1.246 $)
 AC_CONFIG_SRCDIR(src/main/print-vars.c)
 AC_CONFIG_AUX_DIR(scripts)
 STP_INIT
@@ -614,6 +614,9 @@ fi
 GUTENPRINT_RELEASE_VERSION=${GUTENPRINT_MAJOR_VERSION}.${GUTENPRINT_MINOR_VERSION}
 AH_TEMPLATE(GUTENPRINT_RELEASE_VERSION,, [Gutenprint release version])
 AC_DEFINE_UNQUOTED(GUTENPRINT_RELEASE_VERSION, "${GUTENPRINT_RELEASE_VERSION}")
+GUTENPRINT_BASE_VERSION=${GUTENPRINT_MAJOR_VERSION}.${GUTENPRINT_MINOR_VERSION}.${GUTENPRINT_MICRO_VERSION}
+AH_TEMPLATE(GUTENPRINT_BASE_VERSION,, [Gutenprint base version])
+AC_DEFINE_UNQUOTED(GUTENPRINT_BASE_VERSION, "${GUTENPRINT_BASE_VERSION}")
 
 dnl Set PACKAGE_LOCALE_DIR in config.h
 AH_TEMPLATE(PACKAGE_LOCALE_DIR,, [Package locale directory])
@@ -1006,6 +1009,8 @@ AC_SUBST(MAINTAINER_CFLAGS)
 AC_SUBST(PLUG_IN_PATH)
 AC_SUBST(WHICH_PPDS)
 AC_SUBST(BUILD_CUPS_PPDS)
+AC_SUBST(GUTENPRINT_BASE_VERSION)
+AC_SUBST(GUTENPRINT_RELEASE_VERSION)
 
 dnl Optional architecture options to be applied after all autoconf tests
 dnl are done...
@@ -1069,6 +1074,7 @@ AC_CONFIG_COMMANDS([default], [
 echo
 ],
 [GUTENPRINT_RELEASE_VERSION=${GUTENPRINT_RELEASE_VERSION}]
+[GUTENPRINT_BASE_VERSION=${GUTENPRINT_BASE_VERSION}]
 )
 
 AC_OUTPUT
