Add support for 10-channel raw printing for Epson 7900/9900.
Increase max channels to 64.

--- a/src/xml/escp2/media/Makefile.am
+++ b/src/xml/escp2/media/Makefile.am
@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.15 2010/08/11 00:26:09 rlk Exp $
+## $Id: Makefile.am,v 1.16 2014/01/23 13:22:42 rlk Exp $
 ## Copyright (C) 2008 Robert Krawitz
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -61,6 +61,7 @@ pkgxmldata_DATA =				\
 	pro_ultrachrome.xml			\
 	pro_ultrachrome_k3.xml			\
 	pro_ultrachrome_k3v.xml			\
+	pro_ultrachrome_k3v10.xml		\
 	r800.xml				\
 	standard.xml				\
 	standard_gen0.xml			\
