--- a/src/xml/escp2/inks/Makefile.am
+++ b/src/xml/escp2/inks/Makefile.am
@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.14 2013/06/23 01:31:39 rlk Exp $
+## $Id: Makefile.am,v 1.15 2014/01/23 13:22:41 rlk Exp $
 ## Copyright (C) 2008 Robert Krawitz
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -63,6 +63,7 @@ pkgxmldata_DATA =				\
 	pro_ultrachrome_k34.xml			\
 	pro_ultrachrome_k3v.xml			\
 	pro_ultrachrome_k3v4.xml		\
+	pro_ultrachrome_k3v10.xml		\
 	standard.xml				\
 	standard_gen0.xml			\
 	sx445.xml				\
