--- a/doc/developer/Makefile.am
+++ b/doc/developer/Makefile.am
@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.24 2013/12/16 02:34:38 rlk Exp $
+## $Id: Makefile.am,v 1.25 2014/02/03 16:04:21 jlabovitz Exp $
 ## Copyright (C) 2001 Andy Stewart and Roger Leigh
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -38,7 +38,9 @@ MANUAL_SRC_FILES = \
 
 HTMLDIR = reference-html
 
+if BUILD_DOC
 STANDARD_TARGETS = html
+endif
 
 DISTHOOKDIRS = $(HTMLDIR)
 
