--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-dnl $Id: configure.ac,v 1.254 2014/02/09 04:48:01 rlk Exp $
+dnl $Id: configure.ac,v 1.255 2014/02/09 04:49:56 rlk Exp $
 dnl Copyright (C) 2001-2004 Roger Leigh
 dnl 
 dnl This program is free software; you can redistribute it and/or modify
@@ -86,7 +86,7 @@ pushdef([GUTENPRINT_VERSION], GUTENPRINT_MAJOR_VERSION.GUTENPRINT_MINOR_VERSION.
 
 AC_INIT(GUTENPRINT_NAME, GUTENPRINT_VERSION, [gimp-print-devel@lists.sourceforge.net])
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.254 $)
+AC_REVISION($Revision: 1.255 $)
 AC_CONFIG_SRCDIR(src/main/print-vars.c)
 AC_CONFIG_AUX_DIR(scripts)
 STP_INIT
@@ -1121,7 +1121,7 @@ if test "$BUILD_CUPS" != "no" ; then
     fi
     echo "        Build CUPS dyesub USB backend:          $BUILD_LIBUSB_BACKENDS"
     if test "$HAVE_LIBUSBOLD" != "no" ; then
-        echo "            *** WARNING: libusb < 1.0.13 use, see README section II D"
+        echo "            *** WARNING: libusb < 1.0.13 in use, see README section II D"
 	warnings_emitted=1
     fi
 else
