--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-dnl $Id: configure.ac,v 1.259 2014/03/07 00:57:06 rlk Exp $
+dnl $Id: configure.ac,v 1.260 2014/03/07 02:47:32 rlk Exp $
 dnl Copyright (C) 2001-2004 Roger Leigh
 dnl 
 dnl This program is free software; you can redistribute it and/or modify
@@ -48,7 +48,8 @@ dnl 3 (that is, GCI - GBA) and go directly from 2 to 4.
 dnl
 dnl For example:
 dnl 	 GCI=3, GBA=1 => .soname = libgutenprint.so.2.1
-dnl 	 GCI=4, GBA=2 => .soname = libgutenprint.so.2.2
+dnl 	 GCI=4, GBA=2 => .soname = libgutenprint.so.2.2 (5.2.9)
+dnl 	 GCI=5, GBA=3 => .soname = libgutenprint.so.2.3 (5.2.10)
 dnl          (and so on for 5.2 releases, which must remain compatible)
 dnl 	 GCI=4, GBA=0 => .soname = libgutenprint.so.4.0
 dnl 	 GCI=5, GBA=1 => .soname = libgutenprint.so.4.1
@@ -78,15 +79,15 @@ pushdef([GUTENPRINT_MAJOR_VERSION],     [5])
 pushdef([GUTENPRINT_MINOR_VERSION],     [2])
 pushdef([GUTENPRINT_MICRO_VERSION],     [10])
 pushdef([GUTENPRINT_EXTRA_VERSION],     [-pre2])
-pushdef([GUTENPRINT_CURRENT_INTERFACE], [4])
-pushdef([GUTENPRINT_BINARY_AGE],        [2])
+pushdef([GUTENPRINT_CURRENT_INTERFACE], [5])
+pushdef([GUTENPRINT_BINARY_AGE],        [3])
 pushdef([GUTENPRINTUI2_CURRENT_INTERFACE], [1])
 pushdef([GUTENPRINTUI2_BINARY_AGE],        [0])
 pushdef([GUTENPRINT_VERSION], GUTENPRINT_MAJOR_VERSION.GUTENPRINT_MINOR_VERSION.GUTENPRINT_MICRO_VERSION[]GUTENPRINT_EXTRA_VERSION)
 
 AC_INIT(GUTENPRINT_NAME, GUTENPRINT_VERSION, [gimp-print-devel@lists.sourceforge.net])
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.259 $)
+AC_REVISION($Revision: 1.260 $)
 AC_CONFIG_SRCDIR(src/main/print-vars.c)
 AC_CONFIG_AUX_DIR(scripts)
 STP_INIT
